projects/devops/applications/gitlab/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-ingress
  namespace: taiga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: taiga.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taiga
                port:
                  number: 80
